# dplex

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: dplex-domain.mdc  dplex-external-sort-pagination.mdc  dplex-filters-service-queries.mdc  dplex-overview.mdc  dplex-sort-filters.mdc
.github/workflows/: publish.yml  tests.yml
benchmarks/: cache_performance.py  query_performance.py
dataplex/: exceptions.py  version.py
dataplex/cache/: __init__.py
dataplex/cli/: generate.py  main.py  migrate.py
dataplex/filters/: __init__.py  base.py
dataplex/integrations/: __init__.py
dataplex/metrics/: __init__.py  collectors.py  exporters.py
dataplex/migrations/: manager.py
dataplex/repositories/: __init__.py  base_repository.py
dataplex/services/: __init__.py  base.py
dataplex/validation/: decorators.py  validators.py
dataplex/versioning/: strategies.py
docs/: index.md  quickstart.md
docs/cursor/: README.md
dplex/: __init__.py  dp_filters.py  dp_repo.py  dp_service.py  exceptions.py  filter_applier.py  query_builder.py  sort.py  types.py  version.py
dplex/audit/: __init__.py  context.py  mixins.py  service.py
dplex/cache/: memory.py  redis.py
examples/: 1.py  base.py  basic_usage.py  complex_filtering.py  custom_filter.py  enterprise_example.py  fastapi_integration.py  partial_update_schema_raw.py  schema_raw_for_orm.py  service.py  sort.py  update.py  word_filter.py
script/: init_gen.py
tests/: conftest.py  test_parser.py
workflows/: publish.yml
(+40 files in other folders)
