[project]
name = "dplex"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Chesnokov",email = "front-gold@mail.ru"}
]
keywords = ["sqlalchemy", "orm", "repository", "service", "cache", "audit", "enterprise"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
