[project]
name = "dplex"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Chesnokov",email = "front-gold@mail.ru"}
]
keywords = ["sqlalchemy", "orm", "repository", "service", "cache", "audit", "enterprise"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
black = "^25.9.0"

